# rich_transient

./: .gitignore  Pipfile  README.md  __init__.py  pyproject.toml
rich_transient/: __init__.py
scripts/: release.py
