[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rich-transient"
version = "0.1.0"
description = "Reusable Rich-based braille spinner and transient live panel for CLI output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "David Frazer <david.frazer336@gmail.com>" }
]
dependencies = ["rich>=13.7.1"]
keywords = ["rich", "cli", "spinner", "live", "panel", "terminal", "progress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/maravedi/rich-transient"
Repository = "https://github.com/maravedi/rich-transient"
Documentation = "https://github.com/maravedi/rich-transient#readme"

[tool.hatch.build.targets.wheel]
packages = ["rich_transient"]
